--- a/src/ImageImport/ImageImport/ImageImport.csproj
+++ b/src/ImageImport/ImageImport/ImageImport.csproj
@@ -21,6 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\award.ico" />
     <None Remove="Icons\download.ico" />
     <None Remove="Icons\file.ico" />
     <None Remove="Icons\file_minus.ico" />
@@ -28,10 +29,19 @@
     <None Remove="Icons\folder.ico" />
     <None Remove="Icons\folder_minus.ico" />
     <None Remove="Icons\folder_plus.ico" />
+    <None Remove="Icons\info.ico" />
+    <None Remove="Icons\setting.ico" />
+    <None Remove="Icons\x_circle.ico" />
+    <None Remove="Licences\licence.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Licences\licence.html" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Icons\app.ico" />
+    <EmbeddedResource Include="Icons\award.ico" />
     <EmbeddedResource Include="Icons\download.ico" />
     <EmbeddedResource Include="Icons\file.ico" />
     <EmbeddedResource Include="Icons\file_minus.ico" />
@@ -39,9 +49,13 @@
     <EmbeddedResource Include="Icons\folder.ico" />
     <EmbeddedResource Include="Icons\folder_minus.ico" />
     <EmbeddedResource Include="Icons\folder_plus.ico" />
+    <EmbeddedResource Include="Icons\info.ico" />
+    <EmbeddedResource Include="Icons\setting.ico" />
+    <EmbeddedResource Include="Icons\x_circle.ico" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentFTP" Version="42.1.0" />
     <PackageReference Include="MetadataExtractor" Version="2.7.2" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1418.22" />
     <PackageReference Include="Toolbox.CommandLine" Version="1.0.31" />
@@ -65,7 +79,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Licences\" />
     <Folder Include="Resources\" />
   </ItemGroup>
 
