--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,7 @@ on:
 
 env:
   BUILD_VERSION: "1.0.${{ github.run_number }}"
-  CHOCOLATELY_PACKAGE: "chocolateley\\image-import.nuspec"
-  RELEASE_CHOCOLATELY: false
+  CHOCOLATELY_PACKAGE: "chocolateley\\image-import.nuspec"  
 
 jobs:
 
@@ -163,7 +162,7 @@ jobs:
 
   push_chocolately:
     name: Push Chocolately
-    if: env.RELEASE_CHOCOLATELY
+    if: false
     needs: pack_chocolately
     runs-on: windows-latest
 
