--- a/src/ImageImport/Properties/launchSettings.json
+++ b/src/ImageImport/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ImageImport": {
       "commandName": "Project",
-      "commandLineArgs": "D:\\Temp\\Bilder"
+      "commandLineArgs": ""
     }
   }
 }
