--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ env:
   BUILD_VERSION: "1.0.${{ github.run_number }}"
   CHOCOLATELY_NUSPEC: "chocolateley\\image-import.nuspec"  
   BINARY_PACKAGE: "Image-Import-${{ env.BUILD_VERSION }}-binary.zip"
-  CHOCOLATELY_PACKAGE: Image-Import.${{ env.BUILD_VERSION }}.nupkg
+  CHOCOLATELY_PACKAGE: "Image-Import.${{ env.BUILD_VERSION }}.nupkg"
 
 jobs:
 
